--- a/index.html
+++ b/index.html
@@ -63,9 +63,28 @@
         </div>
     </nav>
     <main>
-        <h2 id="introduction">Introduction</h2>
-        <p id="intro-description">At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.</p>
-        <p id="other-info">More information about the service can be found here.</p>
+        <h2 id="introduction">Welcome to SEF Boletins de Alojamento</h2>
+        <p id="intro-description">This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.</p>
+
+        <h3 id="how-it-works">How It Works</h3>
+        <p id="how-description">To get started, follow the instructions below:</p>
+        <div class="instructions">
+            <ol>
+                <li id="instruction-1">Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href="https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr">here</a>.</li>
+                <li id="instruction-2">After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.</li>
+                <li id="instruction-3">Once you start getting responses, navigate to the Google Sheets answers and install the Add-on.</li>
+                <li id="instruction-4">Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information.</li>
+                <li id="instruction-5"><strong>Important:</strong> Do not modify the structure of the form as it may affect the functionality of the add-on.</li>
+                <li id="instruction-6"><strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it. You can find their contacts <a href="https://siba.ssi.gov.pt/contactos/" target="_blank">here</a>.</li>
+            </ol>
+        </div>
+
+        <h3 id="why-use">Why Use This Add-On?</h3>
+        <ul>
+            <li id="why-efficiency"><strong>Efficient</strong>: Automates the tedious process of submitting accommodation reports to SEF, saving you time and reducing human error.</li>
+            <li id="why-secure"><strong>Secure</strong>: Your data is processed directly from your Google Sheet, and no private information is stored or shared. The Add-on only accesses your email to notify you if an error occurs.</li>
+            <li id="why-simple"><strong>Simple to Use</strong>: Easily integrate the Add-on into your Google Sheets document with just a few clicks.</li>
+        </ul>
     </main>
     <footer>
         <p>&copy; 2024 All rights reserved.</p>
@@ -78,22 +97,44 @@
                 "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
-                "introduction": "Introduction",
-                "intro-description": "At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.",
-                "other-info": "More information about the service can be found here."
+                "introduction": "Welcome to SEF Boletins de Alojamento",
+                "intro-description": "This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.",
+                "how-it-works": "How It Works",
+                "how-description": "To get started, follow the instructions below:",
+                "instruction-1": "Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr'>here</a>.",
+                "instruction-2": "After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.",
+                "instruction-3": "Once you start getting responses, navigate to the Google Sheets answers and install the Add-on.",
+                "instruction-4": "Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information.",
+                "instruction-5": "<strong>Important:</strong> Do not modify the structure of the form as it may affect the functionality of the add-on.",
+                "instruction-6": "<strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it. You can find their contacts <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>here</a>.",
+                "why-use": "Why Use This Add-On?",
+                "why-efficiency": "<strong>Efficient</strong>: Automates the tedious process of submitting accommodation reports to SEF, saving you time and reducing human error.",
+                "why-secure": "<strong>Secure</strong>: Your data is processed directly from your Google Sheet, and no private information is stored or shared. The Add-on only accesses your email to notify you if an error occurs.",
+                "why-simple": "<strong>Simple to Use</strong>: Easily integrate the Add-on into your Google Sheets document with just a few clicks."
             },
             pt: {
                 "header-title": "SEF Boletins de Alojamento",
                 "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Página Inicial",
                 "privacy-link": "Política de Privacidade",
-                "introduction": "Introdução",
-                "intro-description": "No SEF Boletins de Alojamento, valorizamos a sua privacidade. Esta Política de Privacidade descreve como tratamos e protegemos os dados que nos fornece através do nosso Add-on para Google Sheets.",
-                "other-info": "Mais informações sobre o serviço podem ser encontradas aqui."
+                "introduction": "Bem-vindo ao SEF Boletins de Alojamento",
+                "intro-description": "Este Add-On do Google ajuda a automatizar o envio de Boletins de Alojamento para o SEF através do seu Google Sheets.",
+                "how-it-works": "Como Funciona",
+                "how-description": "Para começar, siga as instruções abaixo:",
+                "instruction-1": "Faça o download de um <strong><u>template do Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder ao template <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr'>aqui</a>.",
+                "instruction-2": "Após fazer uma cópia, você será o proprietário do formulário. Pode então compartilhar o link do formulário com seus clientes para recolher as informações necessárias.",
+                "instruction-3": "Abra a folha de respostas do Google Sheets e instale o Add-on. (Esta folha só deverá aparecer quando o primeiro hóspede preencher o formulário",
+                "instruction-4": "Clique em <strong>SEF Definições -> Configurações</strong> e preencha suas informações pessoais.",
+                "instruction-5": "<strong>Importante:</strong> Não modifique a estrutura do formulário, pois isso pode afetar a funcionalidade do add-on.",
+                "instruction-6": "<strong>Nota:</strong> Ao registrar-se no site SIBA, se não escolheu o método de envio <strong>Webservice</strong>, é necessário entrar em contato com eles e solicitar a alteração. Pode encontrar os contatos <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>aqui</a>.",
+                "why-use": "Por que Usar Este Add-On?",
+                "why-efficiency": "<strong>Eficiência</strong>: Automatiza o processo tedioso de enviar os boletins de alojamento para o SEF, economizando o seu tempo e reduzindo erros humanos.",
+                "why-secure": "<strong>Seguro</strong>: Os dados são processados diretamente do seu Google Sheets, e nenhuma informação pessoal é armazenada ou compartilhada. O Add-on acede apenas ao seu e-mail para notificá-lo caso ocorra um erro.",
+                "why-simple": "<strong>Fácil de Usar</strong>: Integre facilmente o Add-on no seu documento do Google Sheets com apenas alguns cliques."
             }
         };
 
-        let currentLanguage = localStorage.getItem('language') || 'pt'; // Default language is English
+        let currentLanguage = localStorage.getItem('language') || 'en'; // Default to English
 
         function loadLanguage(language) {
             const lang = translations[language];
