--- a/privacy.html
+++ b/privacy.html
@@ -133,7 +133,7 @@
             }
         };
 
-        let currentLanguage = localStorage.getItem('language') || 'pt'; // Default language is English
+        let currentLanguage = localStorage.getItem('language') || 'pt'; // Default language is Portuguese
 
         function loadLanguage(language) {
             const lang = translations[language];
