--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p id="how-description">To get started, follow the instructions below:</p>
         <div class="instructions">
             <ol>
-                <li id="instruction-1">Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href="https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr">here</a>.</li>
+                <li id="instruction-1">Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href="https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr" target="_blank">here</a>.</li>
                 <li id="instruction-2">After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.</li>
                 <li id="instruction-3">Once you start getting responses, navigate to the Google Sheets answers and install the Add-on.</li>
                 <li id="instruction-4">Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information.</li>
