--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 "how-description": "Para começar, siga as instruções abaixo:",
                 "instruction-1": "Faça o download de um <strong><u>template do Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder ao template <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr'>aqui</a>.",
                 "instruction-2": "Após fazer uma cópia, você será o proprietário do formulário. Pode então compartilhar o link do formulário com seus clientes para recolher as informações necessárias.",
-                "instruction-3": "Abra a folha de respostas do Google Sheets e instale o Add-on. (Esta folha só deverá aparecer quando o primeiro hóspede preencher o formulário",
+                "instruction-3": "Abra a folha de respostas do Google Sheets e instale o Add-on. (Esta folha só deverá aparecer quando o primeiro hóspede preencher o formulário)",
                 "instruction-4": "Clique em <strong>SEF Definições -> Configurações</strong> e preencha suas informações pessoais.",
                 "instruction-5": "<strong>Importante:</strong> Não modifique a estrutura do formulário, pois isso pode afetar a funcionalidade do add-on.",
                 "instruction-6": "<strong>Nota:</strong> Ao registrar-se no site SIBA, se não escolheu o método de envio <strong>Webservice</strong>, é necessário entrar em contato com eles e solicitar a alteração. Pode encontrar os contatos <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>aqui</a>.",
