--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 "intro-description": "This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.",
                 "how-it-works": "How It Works",
                 "how-description": "To get started, follow the instructions below:",
-                "instruction-1": "Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr'>here</a>.",
+                "instruction-1": "Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target="_blank">here</a>.",
                 "instruction-2": "After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.",
                 "instruction-3": "Once you start getting responses, navigate to the Google Sheets answers and install the Add-on.",
                 "instruction-4": "Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information.",
