--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 "intro-description": "Este Add-On do Google ajuda a automatizar o envio de Boletins de Alojamento para o SEF através do seu Google Sheets.",
                 "how-it-works": "Como Funciona",
                 "how-description": "Para começar, siga as instruções abaixo:",
-                "instruction-1": "Faça o download de um <strong><u>template do Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder ao template <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr'>aqui</a>.",
+                "instruction-1": "Faça o download de um <strong><u>template do Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder ao template <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target='_blank'>aqui</a>.",
                 "instruction-2": "Após fazer uma cópia, você será o proprietário do formulário. Pode então compartilhar o link do formulário com seus clientes para recolher as informações necessárias.",
                 "instruction-3": "Abra a folha de respostas do Google Sheets e instale o Add-on. (Esta folha só deverá aparecer quando o primeiro hóspede preencher o formulário)",
                 "instruction-4": "Clique em <strong>SEF Definições -> Configurações</strong> e preencha suas informações pessoais.",
