--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             }
         };
 
-        let currentLanguage = localStorage.getItem('language') || 'pt'; // Default to Portuguese
+        let currentLanguage = localStorage.getItem('language') || 'en'; // Default to Portuguese
 
         function loadLanguage(language) {
             const lang = translations[language];
