--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                 "intro-description": "This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.",
                 "how-it-works": "How It Works",
                 "how-description": "To get started, follow the instructions below:",
-                "instruction-1": "Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target="_blank">here</a>.",
+                "instruction-1": "Download a <strong><u>Google Forms template</u></strong> to input your accommodation data. You can access and download the template from <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target='_blank'>here</a>.",
                 "instruction-2": "After making a copy, you will become the owner of the form. You can then share the form link with your clients to collect their information.",
                 "instruction-3": "Once you start getting responses, navigate to the Google Sheets answers and install the Add-on.",
                 "instruction-4": "Click on <strong>SEF Definições -> Configurações</strong> and fill in your personal information.",
                 "instruction-5": "<strong>Important:</strong> Do not modify the structure of the form as it may affect the functionality of the add-on.",
-                "instruction-6": "<strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it. You can find their contacts <a href='https://siba.ssi.gov.pt/contactos/' target="_blank">here</a>.",
+                "instruction-6": "<strong>Note:</strong> Upon registration on SIBA website, if you did not choose the send method <strong>Webservice</strong>, you need to contact them and request to change it. You can find their contacts <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>here</a>.",
                 "why-use": "Why Use This Add-On?",
                 "why-efficiency": "<strong>Efficient</strong>: Automates the tedious process of submitting accommodation reports to SEF, saving you time and reducing human error.",
                 "why-secure": "<strong>Secure</strong>: Your data is processed directly from your Google Sheet, and no private information is stored or shared. The Add-on only accesses your email to notify you if an error occurs.",
@@ -121,12 +121,12 @@
                 "intro-description": "Este Add-On do Google ajuda a automatizar o envio de Boletins de Alojamento para o SEF através do seu Google Sheets.",
                 "how-it-works": "Como Funciona",
                 "how-description": "Para começar, siga as instruções abaixo:",
-                "instruction-1": "Faça o download de um <strong><u>template do Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder ao template <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target="_blank">aqui</a>.",
+                "instruction-1": "Faça o download de um <strong><u>template do Google Forms</u></strong> para inserir os dados de alojamento. Pode aceder ao template <a href='https://drive.google.com/drive/folders/1s9DltzwwZ1_d-jpRuUTXj3wuYMPV0wKr' target='_blank'>aqui</a>.",
                 "instruction-2": "Após fazer uma cópia, você será o proprietário do formulário. Pode então compartilhar o link do formulário com seus clientes para recolher as informações necessárias.",
                 "instruction-3": "Abra a folha de respostas do Google Sheets e instale o Add-on. (Esta folha só deverá aparecer quando o primeiro hóspede preencher o formulário)",
                 "instruction-4": "Clique em <strong>SEF Definições -> Configurações</strong> e preencha suas informações pessoais.",
                 "instruction-5": "<strong>Importante:</strong> Não modifique a estrutura do formulário, pois isso pode afetar a funcionalidade do add-on.",
-                "instruction-6": "<strong>Nota:</strong> Ao registrar-se no site SIBA, se não escolheu o método de envio <strong>Webservice</strong>, é necessário entrar em contato com eles e solicitar a alteração. Pode encontrar os contatos <a href='https://siba.ssi.gov.pt/contactos/' target="_blank">aqui</a>.",
+                "instruction-6": "<strong>Nota:</strong> Ao registrar-se no site SIBA, se não escolheu o método de envio <strong>Webservice</strong>, é necessário entrar em contato com eles e solicitar a alteração. Pode encontrar os contatos <a href='https://siba.ssi.gov.pt/contactos/' target='_blank'>aqui</a>.",
                 "why-use": "Por que Usar Este Add-On?",
                 "why-efficiency": "<strong>Eficiência</strong>: Automatiza o processo tedioso de enviar os boletins de alojamento para o SEF, economizando o seu tempo e reduzindo erros humanos.",
                 "why-secure": "<strong>Seguro</strong>: Os dados são processados diretamente do seu Google Sheets, e nenhuma informação pessoal é armazenada ou compartilhada. O Add-on acede apenas ao seu e-mail para notificá-lo caso ocorra um erro.",
