--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="QM3KtqvIAPRXktrUM9089RTLixeQ0L3KMvJJe3b7NOc" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">SEF Boletins de Alojamento</title>
     <style>
