Updated data access and data usage

--- a/privacy.html
+++ b/privacy.html
@@ -66,16 +66,18 @@
         <h2 id="introduction">Introduction</h2>
         <p id="intro-description">At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.</p>
 
-        <h2 id="data-collection">Data Collection</h2>
-        <p id="data-collection-description">Our Add-on does not collect or store any personal information beyond what is required for the Add-on’s functionality:</p>
+        <h2 id="data-access">Data Access</h2>
+        <p id="data-access-description">Our Add-on does not collect or store any personal information beyond what is required for the Add-on’s functionality:</p>
         <ul>
-            <li id="data-collection-item-1">We use your Google email address to notify you if an error occurs during the data submission process.</li>
-            <li id="data-collection-item-2">We do not collect or store any data from your Google Sheets or any other private information.</li>
+            <li id="data-access-item-1">We use your Google email address to notify you if an error occurs during the data submission process.</li>
+            <li id="data-access-item-2">We need access to your Google Sheets to open and edit the spreadsheet which contain the forms answers.</li>
         </ul>
 
         <h2 id="how-we-use">How We Use Your Data</h2>
-        <p id="how-we-use-description">Your email address is only used for error notifications related to the Add-on. We do not share, store, or process any other personal data.</p>
-
+         <ul>
+            <li id="how-we-use-item-1">Your email address is only used for error notifications related to the Add-on. We do not share, store, or process any other personal data.</li>
+			<li id="how-we-use-item-2">Your spreadsheets are accessed solely for the purpose of retrieving and transmitting guest information to the foreign office via a web service. We do not share, store, or process this information in any other manner.</li>
+		</ul>
         <h2 id="security">Security</h2>
         <p id="security-description">Your data is processed securely by the Add-on, and no personal data is stored by us. The Add-on interacts directly with Google Sheets and uses secure web service calls to submit the Boletins de Alojamento to SEF.</p>
 
@@ -98,12 +100,13 @@
                 "privacy-link": "Privacy Policy",
                 "introduction": "Introduction",
                 "intro-description": "At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.",
-                "data-collection": "Data Collection",
-                "data-collection-description": "Our Add-on does not collect or store any personal information beyond what is required for the Add-on’s functionality:",
-                "data-collection-item-1": "We use your Google email address to notify you if an error occurs during the data submission process.",
-                "data-collection-item-2": "We do not collect or store any data from your Google Sheets or any other private information.",
+                "data-access": "Data Access",
+                "data-access-description": "Our Add-on does not collect or store any personal information beyond what is required for the Add-on’s functionality:",
+                "data-access-item-1": "We use your Google email address to notify you if an error occurs during the data submission process.",
+                "data-access-item-2": "We do not collect or store any data from your Google Sheets or any other private information.",
                 "how-we-use": "How We Use Your Data",
-                "how-we-use-description": "Your email address is only used for error notifications related to the Add-on. We do not share, store, or process any other personal data.",
+                "how-we-use-item-1": "Your email address is only used for error notifications related to the Add-on. We do not share, store, or process any other personal data.",
+				"how-we-use-item-2":"Your spreadsheets are accessed solely for the purpose of retrieving and transmitting guest information to the foreign office via a web service. We do not share, store, or process this information in any other manner.",
                 "security": "Security",
                 "security-description": "Your data is processed securely by the Add-on, and no personal data is stored by us. The Add-on interacts directly with Google Sheets and uses secure web service calls to submit the Boletins de Alojamento to SEF.",
                 "changes-to-policy": "Changes to This Policy",
@@ -118,12 +121,13 @@
                 "privacy-link": "Política de Privacidade",
                 "introduction": "Introdução",
                 "intro-description": "No SEF Boletins de Alojamento, valorizamos a sua privacidade. Esta Política de Privacidade descreve como tratamos e protegemos os dados que nos fornece através do nosso Add-on para Google Sheets.",
-                "data-collection": "Recolha de Dados",
-                "data-collection-description": "O nosso Add-on não recolhe ou armazena informações pessoais além do que é necessário para o funcionamento do Add-on:",
-                "data-collection-item-1": "Usamos o seu endereço de e-mail do Google para notificá-lo caso ocorra um erro durante o processo de envio dos dados.",
-                "data-collection-item-2": "Não recolhemos ou armazenamos dados das suas sheets do Google ou qualquer outra informação privada.",
+                "data-access": "Recolha de Dados",
+                "data-access-description": "O nosso Add-on não recolhe ou armazena informações pessoais além do que é necessário para o funcionamento do Add-on:",
+                "data-access-item-1": "Usamos o seu endereço de e-mail do Google para notificá-lo caso ocorra um erro durante o processo de envio dos dados.",
+                "data-access-item-2": "Não recolhemos ou armazenamos dados das suas sheets do Google ou qualquer outra informação privada.",
                 "how-we-use": "Como Usamos os Seus Dados",
-                "how-we-use-description": "O seu endereço de e-mail é utilizado apenas para notificações de erro relacionadas ao Add-on. Não compartilhamos, armazenamos ou processamos quaisquer outros dados pessoais.",
+                "how-we-use-item-1": "O seu endereço de email é utilizado apenas para notificações de erros relacionadas com o Add-on. Não partilhamos, armazenamos ou processamos quaisquer outros dados pessoais.",
+				"how-we-use-item-2":"As suas folhas de cálculo são acedidas exclusivamente para recolher e transmitir, através de um serviço web, as informações dos hóspedes para o serviço de estrangeiros. Não partilhamos, armazenamos ou processamos estas informações de nenhuma outra forma.",
                 "security": "Segurança",
                 "security-description": "Os seus dados são processados de forma segura pelo Add-on, e nenhum dado pessoal é armazenado por nós. O Add-on interage diretamente com as sheets do Google e utiliza chamadas de serviço web seguras para enviar os Boletins de Alojamento ao SEF.",
                 "changes-to-policy": "Alterações a Esta Política",
