Update index with terms of service

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <nav>
         <a href="index.html" id="home-link">Home</a>
         <a href="privacy.html" id="privacy-link">Privacy Policy</a>
+        <a href="termsOfService.html" id=terms-link">Terms of Service</a>
         <div class="language-links">
             <a href="#" id="link-pt">PT</a> | <a href="#" id="link-en">EN</a>
         </div>
@@ -98,6 +99,7 @@
                 "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
+                "terms-link": "Terms of Service",
                 "introduction": "Welcome to SEF Boletins de Alojamento",
                 "intro-description": "This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.",
                 "how-it-works": "How It Works",
@@ -117,6 +119,7 @@
                 "header-title": "SEF Boletins de Alojamento",
                 "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Página Inicial",
+                "terms-link": "Termos de Serviço",
                 "privacy-link": "Política de Privacidade",
                 "introduction": "Bem-vindo ao SEF Boletins de Alojamento",
                 "intro-description": "Este Add-On do Google ajuda a automatizar o envio de Boletins de Alojamento para o SEF através do seu Google Sheets.",
