--- a/privacy.html
+++ b/privacy.html
@@ -58,6 +58,7 @@
     <nav>
         <a href="index.html" id="home-link">Home</a>
         <a href="privacy.html" id="privacy-link">Privacy Policy</a>
+	<a href="termsOfService.html" id="terms-link">Terms of Service</a>    
         <div class="language-links">
             <a href="#" id="link-pt">PT</a> | <a href="#" id="link-en">EN</a>
         </div>
@@ -98,6 +99,7 @@
                 "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
+		"terms-link":	"Terms of Service",    
                 "introduction": "Introduction",
                 "intro-description": "At SEF Boletins de Alojamento, we value your privacy. This Privacy Policy outlines how we handle and protect the data that you provide through our Google Sheets Add-on.",
                 "data-access": "Data Access",
@@ -119,6 +121,7 @@
                 "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Página Inicial",
                 "privacy-link": "Política de Privacidade",
+		"terms-link":	"Termos de Serviço",
                 "introduction": "Introdução",
                 "intro-description": "No SEF Boletins de Alojamento, valorizamos a sua privacidade. Esta Política de Privacidade descreve como tratamos e protegemos os dados que nos fornece através do nosso Add-on para Google Sheets.",
                 "data-access": "Recolha de Dados",
