--- a/termsOfService.html
+++ b/termsOfService.html
@@ -82,8 +82,6 @@
         <h2 id="changes">Alterações e Encerramento</h2>
         <p id="changes-description">Podemos modificar ou descontinuar o Add-on a qualquer momento, sem aviso prévio.</p>
 
-        <h2 id="contact">Contato</h2>
-        <p id="contact-description">Para suporte ou dúvidas, entre em contato pelo e-mail: [Seu E-mail]</p>
     </main>
     <footer>
         <p>&copy; 2024 Todos os direitos reservados.</p>
@@ -108,9 +106,7 @@
                 "limitation-of-liability": "Limitation of Liability",
                 "limitation-description": "The Add-on is provided 'as is', without guarantees of continuous operation or error-free performance. We are not responsible for any failure to submit data to SEF.",
                 "changes": "Changes and Termination",
-                "changes-description": "We may modify or discontinue the Add-on at any time, without prior notice.",
-                "contact": "Contact",
-                "contact-description": "For support or questions, please contact us at: [Your Email]"
+                "changes-description": "We may modify or discontinue the Add-on at any time, without prior notice."
             },
             pt: {
                 "header-title": "Termos de Serviço - SEF Boletins de Alojamento",
@@ -129,9 +125,7 @@
                 "limitation-of-liability": "Limitação de Responsabilidade",
                 "limitation-description": "O Add-on é fornecido 'como está', sem garantias de funcionamento contínuo ou isenção de erros. Não nos responsabilizamos por falhas no envio de dados ao SEF.",
                 "changes": "Alterações e Encerramento",
-                "changes-description": "Podemos modificar ou descontinuar o Add-on a qualquer momento, sem aviso prévio.",
-                "contact": "Contato",
-                "contact-description": "Para suporte ou dúvidas, entre em contato pelo e-mail: [Seu E-mail]"
+                "changes-description": "Podemos modificar ou descontinuar o Add-on a qualquer momento, sem aviso prévio."
             }
         };
 
