--- a/termsOfService.html
+++ b/termsOfService.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="page-title">Termos de Serviço - SEF Boletins de Alojamento</title>
+    <title id="page-title">SEF Boletins de Alojamento</title>
     <style>
         body {
             display: flex;
@@ -53,7 +53,7 @@
 </head>
 <body>
     <header>
-        <h1 id="header-title">Termos de Serviço - SEF Boletins de Alojamento</h1>
+        <h1 id="header-title">SEF Boletins de Alojamento</h1>
     </header>
     <nav>
         <a href="index.html" id="home-link">Página Inicial</a>
@@ -90,8 +90,8 @@
     <script>
         const translations = {
             en: {
-                "header-title": "Terms of Service - SEF Boletins de Alojamento",
-                "page-title": "Terms of Service - SEF Boletins de Alojamento",
+                "header-title": "SEF Boletins de Alojamento",
+                "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
                 "terms-link": "Terms of Service",
@@ -109,8 +109,8 @@
                 "changes-description": "We may modify or discontinue the Add-on at any time, without prior notice."
             },
             pt: {
-                "header-title": "Termos de Serviço - SEF Boletins de Alojamento",
-                "page-title": "Termos de Serviço - SEF Boletins de Alojamento",
+                "header-title": "SEF Boletins de Alojamento",
+                "page-title": "SEF Boletins de Alojamento",
                 "home-link": "Página Inicial",
                 "privacy-link": "Política de Privacidade",
                 "terms-link": "Termos de Serviço",
