element id correction

--- a/Support.html
+++ b/Support.html
@@ -57,10 +57,10 @@
         <h1 id="header-title">SEF Boletins de Alojamento</h1>
     </header>
     <nav>
-        <a href="index.html" id="home-link">Página Inicial</a>
-        <a href="privacy.html" id="privacy-link">Política de Privacidade</a>
-        <a href="termsOfService.html" id="terms-link">Termos de Serviço</a>
-		<a href="support.html" id="support">Suporte</a>
+         <a href="index.html" id="home-link">Home</a>
+        <a href="privacy.html" id="privacy-link">Privacy Policy</a>
+		<a href="termsOfService.html" id="terms-link">Terms of Service</a>
+		<a href="support.html" id="support-link">Support</a>		
         <div class="language-links">
             <a href="#" id="link-pt">PT</a> | <a href="#" id="link-en">EN</a>
         </div>
@@ -82,7 +82,7 @@
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
                 "terms-link": "Terms of Service",
-                "support" : "Support",
+                "support-link" : "Support",
 				"contact" : "Contact",
 				"contact-email" : "For support please contact us via o al.manager23@gmail.com"
             },
@@ -92,7 +92,7 @@
                 "home-link": "Página Inicial",
                 "privacy-link": "Política de Privacidade",
                 "terms-link": "Termos de Serviço",
-                "support" : "Support",
+                "support-link" : "Suporte",
 				"contact" : "Contacto",
 				"contact-email" : "Para ajuda contacte o nosso suporte através de al.manager23@gmail.com"
             }
