--- a/termsOfService.html
+++ b/termsOfService.html
@@ -56,9 +56,10 @@
         <h1 id="header-title">SEF Boletins de Alojamento</h1>
     </header>
     <nav>
-        <a href="index.html" id="home-link">Página Inicial</a>
-        <a href="privacy.html" id="privacy-link">Política de Privacidade</a>
-        <a href="termsOfService.html" id="terms-link">Termos de Serviço</a>
+         <a href="index.html" id="home-link">Home</a>
+        <a href="privacy.html" id="privacy-link">Privacy Policy</a>
+		<a href="termsOfService.html" id="terms-link">Terms of Service</a>
+		<a href="support.html" id="support-link">Support</a>		
         <div class="language-links">
             <a href="#" id="link-pt">PT</a> | <a href="#" id="link-en">EN</a>
         </div>
@@ -95,6 +96,7 @@
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
                 "terms-link": "Terms of Service",
+				"support-link": "Support",
                 "introduction": "Introduction",
                 "intro-description": "At SEF Boletins de Alojamento, we value your privacy. These Terms of Service describe how the Add-on works and how data is handled during its use.",
                 "service-description": "Service Description",
@@ -114,6 +116,7 @@
                 "home-link": "Página Inicial",
                 "privacy-link": "Política de Privacidade",
                 "terms-link": "Termos de Serviço",
+				"support-link": "Suporte",
                 "introduction": "Introdução",
                 "intro-description": "No SEF Boletins de Alojamento, valorizamos a sua privacidade. Estes Termos de Serviço descrevem como o Add-on funciona e como os dados são tratados durante o seu uso.",
                 "service-description": "Descrição do Serviço",
