--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="index.html" id="home-link">Home</a>
         <a href="privacy.html" id="privacy-link">Privacy Policy</a>
         <a href="termsOfService.html" id=terms-link">Terms of Service</a>
+		<a href="support.html" id="support-link">Support</a>
         <div class="language-links">
             <a href="#" id="link-pt">PT</a> | <a href="#" id="link-en">EN</a>
         </div>
@@ -100,6 +101,7 @@
                 "home-link": "Home",
                 "privacy-link": "Privacy Policy",
                 "terms-link": "Terms of Service",
+				"support-link": "Support",
                 "introduction": "Welcome to SEF Boletins de Alojamento",
                 "intro-description": "This Google Add-On helps you automate the submission of Boletins de Alojamento to SEF using your Google Sheets.",
                 "how-it-works": "How It Works",
@@ -121,6 +123,7 @@
                 "home-link": "Página Inicial",
                 "terms-link": "Termos de Serviço",
                 "privacy-link": "Política de Privacidade",
+				"support-link": "Suporte",
                 "introduction": "Bem-vindo ao SEF Boletins de Alojamento",
                 "intro-description": "Este Add-On do Google ajuda a automatizar o envio de Boletins de Alojamento para o SEF através do seu Google Sheets.",
                 "how-it-works": "Como Funciona",
